fixed z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   position: sticky !important;
   top: 0;
   height: 60;
+  z-index: 999;
 }
 
 .navbar-lewagon {
